--- a/index.html
+++ b/index.html
@@ -170,6 +170,89 @@
         border: 1px dashed rgba(201, 162, 74, 0.7);
       }
 
+      /* Planning workspace styles keep the home view campaign-first rather than tool-first. */
+      .planning-layout {
+        display: grid;
+        gap: 1.2rem;
+      }
+
+      .planning-card {
+        background: rgba(32, 25, 18, 0.92);
+        border-radius: 14px;
+        padding: 1rem 1.1rem;
+        border-left: 4px solid var(--gold);
+        box-shadow: 0 10px 18px var(--shadow);
+      }
+
+      .planning-card h3 {
+        margin-bottom: 0.45rem;
+        font-family: var(--serif);
+        color: var(--gold-bright);
+      }
+
+      .planning-list {
+        list-style: none;
+        display: grid;
+        gap: 0.7rem;
+      }
+
+      .planning-list li {
+        background: rgba(20, 16, 11, 0.92);
+        border-radius: 10px;
+        padding: 0.6rem 0.8rem;
+        border: 1px solid rgba(201, 162, 74, 0.3);
+      }
+
+      .planning-actions {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.8rem;
+      }
+
+      .primary-action {
+        border: 1px solid rgba(201, 162, 74, 0.65);
+        border-radius: 10px;
+        background: linear-gradient(135deg, rgba(176, 42, 42, 0.96), rgba(122, 20, 20, 0.96));
+        color: var(--ink);
+        padding: 0.65rem 1rem;
+        cursor: pointer;
+        font-weight: 700;
+        transition: transform 0.15s ease;
+      }
+
+      .primary-action:hover,
+      .primary-action:focus-visible {
+        transform: translateY(-2px);
+        outline: none;
+      }
+
+      .planning-tool-tabs {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.7rem;
+        margin-top: 0.8rem;
+      }
+
+      .secondary-tab {
+        border: 1px dashed rgba(201, 162, 74, 0.65);
+        border-radius: 10px;
+        background: rgba(24, 19, 13, 0.9);
+        color: var(--ink);
+        padding: 0.55rem 0.85rem;
+        cursor: pointer;
+      }
+
+      .planning-card--planned {
+        border-left-color: rgba(227, 160, 66, 0.9);
+      }
+
+      .planned-note {
+        margin-top: 0.5rem;
+        display: inline-block;
+        font-size: 0.85rem;
+        color: var(--warning);
+      }
+
       /* Side panels for notes and status */
       .side-panel {
         background: rgba(34, 26, 19, 0.94);
@@ -1414,116 +1497,77 @@
     <header class="app-header">
       <div class="container header-frame">
         <p class="header-title">Pathfinder Game Master Toolkit</p>
-        <h1 class="header-module" id="active-module">GM Command Dashboard</h1>
+        <h1 class="header-module" id="active-module">Current Campaign Plan</h1>
         <p class="header-description" id="module-description">
-          Plan encounters, manage prep, and jump into core GM tools from a focused dashboard.
+          Review upcoming sessions, prep priorities, and launch tools as needed from one planning workspace.
         </p>
       </div>
     </header>
 
-    <!-- Main dashboard area with tool access and status panels -->
+    <!-- Planning-focused home view keeps campaign context visible before opening modules. -->
     <main class="dashboard-main" id="dashboard-view">
       <div class="container dashboard-grid">
-        <section aria-label="GM tool dashboard">
-          <h2 class="section-title">Core GM Tools</h2>
-          <div class="tool-grid">
-            <article class="tool-card">
-              <h3>Encounter Builder</h3>
-              <p>Balance fights, adjust difficulty, and auto-calc XP budgets.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Combat</span>
-                <span class="tool-tag">XP</span>
-              </div>
-            </article>
-            <button
-              class="tool-card tool-card--action"
-              type="button"
-              id="npc-launch"
-              aria-label="Open NPC Vault module"
-            >
-              <h3>NPC Vault</h3>
-              <p>Store allies and villains with roleplay prompts and stat notes.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Social</span>
-                <span class="tool-tag">Lore</span>
-              </div>
-              <span class="tool-launch">Open Vault →</span>
-            </button>
-            <button
-              class="tool-card tool-card--action"
-              type="button"
-              id="creature-launch"
-              aria-label="Open Creature Library module"
-            >
-              <h3>Creature Library</h3>
-              <p>Capture combat-ready stat cards and export printable creature decks.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Bestiary</span>
-                <span class="tool-tag">Print</span>
-              </div>
-              <span class="tool-launch">Open Library →</span>
-            </button>
-            <article class="tool-card">
-              <h3>Treasure Generator</h3>
-              <p>Roll loot tables and print item cards for quick handouts.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Loot</span>
-                <span class="tool-tag">Handouts</span>
-              </div>
-            </article>
-            <button
-              class="tool-card tool-card--action"
-              type="button"
-              id="initiative-launch"
-              aria-label="Open Initiative Tracker module"
-            >
-              <h3>Initiative Tracker</h3>
-              <p>Track turn order, conditions, and persistent damage rounds.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Combat</span>
-                <span class="tool-tag">Timing</span>
-              </div>
-              <span class="tool-launch">Open Tracker →</span>
-            </button>
-            <button
-              class="tool-card tool-card--action"
-              type="button"
-              id="session-launch"
-              aria-label="Open Session Notes module"
-            >
-              <h3>Session Notes</h3>
-              <p>Capture prep, live beats, and post-session reflections without breaking flow.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Narrative</span>
-                <span class="tool-tag">Planning</span>
-              </div>
-              <span class="tool-launch">Open Notes →</span>
-            </button>
-            <article class="tool-card">
-              <h3>Map Library</h3>
-              <p>Browse maps, attach encounter markers, and export for VTTs.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Exploration</span>
-                <span class="tool-tag">VTT</span>
-              </div>
-            </article>
-            <article class="tool-card">
-              <h3>Downtime Planner</h3>
-              <p>Schedule crafting, research, and settlement activities.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Kingdom</span>
-                <span class="tool-tag">Crafting</span>
-              </div>
-            </article>
-            <article class="tool-card">
-              <h3>Rules Reference</h3>
-              <p>Bookmark frequently used rules and house adjustments.</p>
-              <div class="tool-meta">
-                <span class="tool-tag">Rules</span>
-                <span class="tool-tag">Quick</span>
-              </div>
-            </article>
-          </div>
+        <section aria-label="Campaign planning workspace" class="planning-layout">
+          <h2 class="section-title">Current Campaign Plan</h2>
+          <article class="planning-card" aria-label="Campaign launch actions">
+            <h3>Session Launch Actions</h3>
+            <p>Start from your plan, then jump into active tracking or prep with one click.</p>
+            <div class="planning-actions">
+              <button class="primary-action" type="button" id="start-session-action">Start Session</button>
+              <button class="primary-action" type="button" id="continue-prep-action">Continue Prep</button>
+            </div>
+          </article>
+
+          <article class="planning-card" aria-label="Upcoming sessions">
+            <h3>Upcoming Sessions</h3>
+            <ul class="planning-list">
+              <li><strong>Session 18:</strong> Siege of Emberwatch (Tomorrow, 7:30 PM)</li>
+              <li><strong>Session 19:</strong> Cultist Interrogation (Sat, May 18)</li>
+            </ul>
+          </article>
+
+          <article class="planning-card" aria-label="Open prep tasks">
+            <h3>Open Prep Tasks</h3>
+            <ul class="planning-list">
+              <li>Finalize rooftop chase hazard DCs for Emberwatch alleys.</li>
+              <li>Prepare social clues for Captain Vale's informant scene.</li>
+              <li>Confirm fallback encounter if players skip the crypt route.</li>
+            </ul>
+          </article>
+
+          <article class="planning-card" aria-label="Linked campaign assets">
+            <h3>Linked Encounters, NPCs, and Creatures</h3>
+            <ul class="planning-list">
+              <li><strong>Encounter:</strong> Emberwatch Gate Ambush (Moderate 6)</li>
+              <li><strong>NPC:</strong> Captain Vale (Ally, City Watch)</li>
+              <li><strong>Creature:</strong> Ash Warden Drake (Level 7 skirmisher)</li>
+            </ul>
+          </article>
+
+          <article class="planning-card" aria-label="Secondary tool modules">
+            <h3>Tool Modules (Secondary)</h3>
+            <p>Open focused tool panels from the planning workspace as needed.</p>
+            <div class="planning-tool-tabs" role="tablist" aria-label="Planning workspace tools">
+              <button class="secondary-tab" type="button" id="initiative-launch" aria-label="Open Initiative Tracker module">
+                Initiative Tracker
+              </button>
+              <button class="secondary-tab" type="button" id="session-launch" aria-label="Open Session Notes module">
+                Session Notes
+              </button>
+              <button class="secondary-tab" type="button" id="npc-launch" aria-label="Open NPC Vault module">
+                NPC Vault
+              </button>
+              <button class="secondary-tab" type="button" id="creature-launch" aria-label="Open Creature Library module">
+                Creature Library
+              </button>
+            </div>
+          </article>
+
+          <article class="planning-card planning-card--planned" aria-label="Planned module">
+            <h3>Treasure Generator</h3>
+            <p>Loot workflow is planned but not yet implemented as a launchable module.</p>
+            <span class="planned-note">Planned module · no launch action yet</span>
+          </article>
         </section>
 
         <!-- Right column panels for spotlight info -->
@@ -3092,6 +3136,7 @@
       const dashboardView = document.getElementById("dashboard-view");
       const initiativeModule = document.getElementById("initiative-module");
       const initiativeLaunch = document.getElementById("initiative-launch");
+      const startSessionAction = document.getElementById("start-session-action");
       const initiativeBack = document.getElementById("initiative-back");
       const encounterPanelToggle = document.getElementById("encounter-panel-toggle");
       const encounterPanelToggleCollapsed = document.getElementById("encounter-panel-toggle-collapsed");
@@ -3201,6 +3246,7 @@
       // Session notes elements wire the MVP note capture form.
       const sessionModule = document.getElementById("session-module");
       const sessionLaunch = document.getElementById("session-launch");
+      const continuePrepAction = document.getElementById("continue-prep-action");
       const sessionBack = document.getElementById("session-back");
       const sessionForm = document.getElementById("session-form");
       const sessionSave = document.getElementById("session-save");
@@ -3263,24 +3309,25 @@
       // Single source of truth for header copy across dashboard and module views.
       const headerCopy = {
         dashboard: {
-          module: "GM Command Dashboard",
-          description: "Plan encounters, manage prep, and jump into core GM tools from a focused dashboard.",
+          module: "Current Campaign Plan",
+          description:
+            "Review upcoming sessions, prep priorities, and launch tools as secondary panels from this workspace.",
         },
         initiative: {
           module: "Initiative Tracker",
-          description: "Run turn order, condition tracking, and round pacing in a compact combat workspace.",
+          description: "Run turn order, condition tracking, and round pacing, then return to the campaign plan.",
         },
         npc: {
           module: "NPC Vault",
-          description: "Capture NPC profiles, relationship cues, and story hooks in a fast-access roster.",
+          description: "Capture NPC profiles and return linked notes to the campaign planning workspace.",
         },
         creature: {
           module: "Creature Library",
-          description: "Build combat-ready creature cards and export printable stat decks on demand.",
+          description: "Manage linked creature cards used by your current campaign plan.",
         },
         session: {
           module: "Session Notes",
-          description: "Prepare session beats, capture live updates, and log follow-ups in one workspace.",
+          description: "Continue prep and live notes tied directly to your current campaign plan.",
         },
       };
 
@@ -5118,12 +5165,14 @@
 
       // Wire module navigation events for the initiative tracker entry point.
       initiativeLaunch.addEventListener("click", openInitiativeModule);
+      startSessionAction.addEventListener("click", openInitiativeModule);
       initiativeBack.addEventListener("click", closeInitiativeModule);
       npcLaunch.addEventListener("click", openNpcModule);
       npcBack.addEventListener("click", closeNpcModule);
       creatureLaunch.addEventListener("click", openCreatureModule);
       creatureBack.addEventListener("click", closeCreatureModule);
       sessionLaunch.addEventListener("click", openSessionModule);
+      continuePrepAction.addEventListener("click", openSessionModule);
       sessionBack.addEventListener("click", closeSessionModule);
       // NPC wizard entry points keep the gallery as the default screen.
       npcCreate.addEventListener("click", () => openNpcWizard({ mode: "create" }));
