Add root entrypoint redirect for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Table-Ready</title>
+    <!--
+      Root entry point for GitHub Pages deployments.
+      - Keeps app source in /app for clean organization.
+      - Redirects users to the actual static app shell.
+    -->
+    <meta http-equiv="refresh" content="0; url=./app/index.html" />
+    <script>
+      // JS redirect backup for browsers that ignore meta refresh behavior.
+      window.location.replace('./app/index.html');
+    </script>
+  </head>
+  <body>
+    <main>
+      <p>Redirecting to Table-Ready…</p>
+      <p>
+        If you are not redirected automatically,
+        <a href="./app/index.html">open the app here</a>.
+      </p>
+    </main>
+  </body>
 </html>
